[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/Dude.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/ScreenShake.gd" type="Script" id=2]
[ext_resource path="res://src/Player.gd" type="Script" id=3]
[ext_resource path="res://src/Game.gd" type="Script" id=4]
[ext_resource path="res://src/BgCanvas.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/MainCanvas.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Spawner.gd" type="Script" id=9]
[ext_resource path="res://assets/sprites/pentagra-inner.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/pentagram-dots.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/pentagram.png" type="Texture" id=13]
[ext_resource path="res://src/Rotator.gd" type="Script" id=14]
[ext_resource path="res://src/Pulsate.gd" type="Script" id=15]
[ext_resource path="res://src/Appearer.gd" type="Script" id=16]
[ext_resource path="res://assets/sprites/heart.png" type="Texture" id=21]

[node name="Game" type="Node2D"]
position = Vector2( 0.240417, 0 )
script = ExtResource( 4 )
colors = PoolColorArray( 0.964706, 0.580392, 0.756863, 1, 0.827451, 0.972549, 0.886275, 1, 0.894118, 0.756863, 0.976471, 1, 0.929412, 0.905882, 0.694118, 1, 0.662745, 0.870588, 0.976471, 1 )

[node name="heart" type="Sprite" parent="."]
visible = false
position = Vector2( 485.899, 298.89 )
texture = ExtResource( 21 )

[node name="BgCanvas" parent="." instance=ExtResource( 5 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
script = ExtResource( 3 )
is_enemy = false

[node name="Spawner" type="Node2D" parent="."]
position = Vector2( 1386.99, -0.355652 )
script = ExtResource( 9 )

[node name="StartTimer" type="Timer" parent="Spawner"]
autostart = true

[node name="Timer" type="Timer" parent="Spawner"]
wait_time = 0.4

[node name="WaveTimer" type="Timer" parent="Spawner"]
wait_time = 10.0
one_shot = true

[node name="Appearer" type="Node2D" parent="Spawner"]
scale = Vector2( 1e-05, 1e-05 )
script = ExtResource( 16 )

[node name="Sprites" type="Node2D" parent="Spawner/Appearer"]
script = ExtResource( 15 )
speed = 1.5
amount = 0.2

[node name="pentagram-dots" type="Sprite" parent="Spawner/Appearer/Sprites"]
self_modulate = Color( 1, 1, 1, 0.239216 )
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )
script = ExtResource( 14 )
speed = -0.5

[node name="pentagram" type="Sprite" parent="Spawner/Appearer/Sprites"]
self_modulate = Color( 1, 1, 1, 0.239216 )
scale = Vector2( 2, 2 )
texture = ExtResource( 13 )
script = ExtResource( 14 )

[node name="Node2D" type="Node2D" parent="Spawner/Appearer/Sprites"]
script = ExtResource( 15 )
speed = 0.5
amount = -0.2

[node name="pentagra-inner" type="Sprite" parent="Spawner/Appearer/Sprites/Node2D"]
self_modulate = Color( 1, 1, 1, 0.239216 )
scale = Vector2( 2, 2 )
texture = ExtResource( 11 )
script = ExtResource( 14 )

[node name="Canvas" parent="." instance=ExtResource( 6 )]

[node name="Camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 5, 5 )
smoothing_enabled = true

[node name="ScreenShake" type="Node2D" parent="Camera"]
position = Vector2( 367.771, 138.108 )
script = ExtResource( 2 )
[connection signal="no_enemies" from="." to="Spawner" method="_on_Game_no_enemies"]
[connection signal="timeout" from="Spawner/StartTimer" to="Spawner" method="_on_StartTimer_timeout"]
[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_Timer_timeout"]
[connection signal="timeout" from="Spawner/WaveTimer" to="Spawner" method="_on_WaveTimer_timeout"]
